--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">  -->
     
   
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="js/js.js"></script></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
