--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="shortcut icon" href="../img/logo33-04.png" type="image/png">
+    <link rel="shortcut icon" href="img/cbo.png" type="image/png">
     
    
     <link rel="preconnect" href="https://fonts.gstatic.com">
